--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^5.0.4",
     "axios": "^1.12.2",
     "express": "^5.1.0",
+    "mysql2": "^3.15.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
