--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,7 @@ web_modules/
 # dotenv environment variable files
 .env
 .env.*
-!.env.example
+!.env.defaults
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
