--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mysql2": "^3.15.3",
+    "openai": "^6.7.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
